--- a/app_server/views/layout.pug
+++ b/app_server/views/layout.pug
@@ -3,10 +3,10 @@ html
   head
     meta(name='viewport', content='width=device-width, initial-scale=1.0')
     title= title
-    //- link(rel='stylesheet', href='/bootstrap/css/amelia.bootstrap.css')
+    link(rel='stylesheet', href='/bootstrap/css/amelia.bootstrap.css')
     //- link(rel='stylesheet', href='/bootstrap/css/journal.bootstrap.css')
     link(rel='stylesheet', href='/bootstrap/css/united.bootstrap.min.css')
-    link(rel='stylesheet', href='/stylesheets/style.css')
+    //- link(rel='stylesheet', href='/stylesheets/style.css')
   body
     .navbar.navbar-default.navbar-fixed-top
       .container
@@ -28,5 +28,5 @@ html
         .row
           .col-xs-12
             small &copy; Walter Johnson 2016
-    script(src='/javascripts/jquery-1.11.1.min.js')
+    script(src='/javascripts/jquery-1.12.3.min.js')
     script(src='/bootstrap/js/bootstrap.min.js')
