in-class editing

--- a/app_server/views/layout.pug
+++ b/app_server/views/layout.pug
@@ -3,10 +3,10 @@ html
   head
     meta(name='viewport', content='width=device-width, initial-scale=1.0')
     title= title
-    link(rel='stylesheet', href='/bootstrap/css/amelia.bootstrap.css')
+    //- link(rel='stylesheet', href='/bootstrap/css/amelia.bootstrap.css')
     //- link(rel='stylesheet', href='/bootstrap/css/journal.bootstrap.css')
     link(rel='stylesheet', href='/bootstrap/css/united.bootstrap.min.css')
-    //- link(rel='stylesheet', href='/stylesheets/style.css')
+    link(rel='stylesheet', href='/stylesheets/style.css')
   body
     .navbar.navbar-default.navbar-fixed-top
       .container
