--- a/app_server/views/layout.pug
+++ b/app_server/views/layout.pug
@@ -30,3 +30,4 @@ html
             small &copy; Walter Johnson 2016
     script(src='/javascripts/jquery-1.12.3.min.js')
     script(src='/bootstrap/js/bootstrap.min.js')
+    script(src='/javascripts/validation.js')
